Prepare for mobile dist